--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:3.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
         classpath "io.realm:realm-gradle-plugin:$realmVersion"
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.6"
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
