从app目录中解耦出network模块

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     api "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:retrofit-converters:${rootProject.ext.retrofitVersion}"
 //    api "com.squareup.retrofit2:converter-protobuf:${rootProject.ext.retrofitVersion}"
+//    api "com.squareup.retrofit2:converter-wire:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:retrofit-mock:${rootProject.ext.retrofitVersion}"
