--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,35 +13,6 @@ apply plugin: 'versionpluginforkotlin'
 
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/util.gradle"
 
-apply plugin: 'com.google.protobuf'
-
-protobuf {
-    protoc {
-        // You still need protoc like in the non-Android case
-        artifact = 'com.google.protobuf:protoc:3.0.0'
-    }
-    plugins {
-        javalite {
-            // The codegen for lite comes as a separate artifact
-            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
-        }
-    }
-    generateProtoTasks {
-        all().each { task ->
-            task.builtins {
-                // In most cases you don't need the full Java output
-                // if you use the lite output.
-                remove java
-            }
-            task.plugins {
-                javalite { }
-            }
-        }
-    }
-}
-
-
-
 versionPlugin {
     buildTypeMatcher = 'debug'
 //        '$appName/project/buildType-v_$versionName-c_$versionCode'
@@ -172,16 +143,6 @@ android {
         main.manifest.srcFile "src/animationsExprimental/AndroidManifest.xml"
         main.assets.srcDirs += ["src/animationsExprimental/assets"]
 
-        //protobuf
-        main{
-            java{
-                srcDirs += "${protobuf.generatedFilesBaseDir}/main/javalite"
-            }
-//            proto {
-//                srcDir 'src/main/proto'
-//
-//            }
-        }
     }
 
 //    useLibrary 'android.test.runner'
@@ -216,6 +177,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':location')
     implementation project(path: ':chatroom')
+    implementation project(path: ':network')
 //    implementation project(path: ':mockserver')
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
@@ -252,7 +214,6 @@ dependencies {
     // Android Testing Support Library's runner and rules
     androidTestImplementation "androidx.test:runner:1.1.0"
     androidTestImplementation "androidx.test:rules:1.1.0"
-    api 'com.google.protobuf:protobuf-lite:3.0.0'
 
 //    androidTestImplementation 'androidx.test:monitor:1.1.0'
 //    androidTestImplementation 'androidx.multidex:multidex-instrumentation:2.0.0',{
