--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 println("settings start")
-include ':location', ':common', ':gradle_plugin', ':chatroom'
+include ':location', ':common', ':gradle_plugin', ':chatroom', ':network'
 if (!isComponentMode.toBoolean()) {
     include ':app'
 }
