--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,7 +38,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'androidx.core:core-ktx:1.0.0'
+    api 'androidx.core:core-ktx:1.0.1'
     api 'androidx.multidex:multidex:2.0.0'
     api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
     api "io.reactivex.rxjava2:rxkotlin:2.2.0"
@@ -48,12 +48,12 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
-    api "com.android.support:support-vector-drawable:28.0.0"
+    api 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
 
     /**
      * ===============================mvvm start================================
      */
-    annotationProcessor 'androidx.databinding:databinding-compiler:3.4.0-alpha02'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.4.0-alpha08'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
 //
@@ -100,10 +100,10 @@ dependencies {
      * ================================database start==============================
      */
     //room database
-    testImplementation 'androidx.room:room-testing:2.1.0-alpha02'
-    api 'androidx.room:room-runtime:2.1.0-alpha02'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha02'
-    api 'androidx.room:room-rxjava2:2.1.0-alpha02'
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha03'
+    api 'androidx.room:room-runtime:2.1.0-alpha03'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha03'
+    api 'androidx.room:room-rxjava2:2.1.0-alpha03'
 
     //realm database
     api "io.realm:realm-annotations:$realmVersion"
@@ -118,12 +118,12 @@ dependencies {
      * ================================ui start=====================================
      */
     api "androidx.appcompat:appcompat:${rootProject.ext.supportLibraryVersion}"
-    api "androidx.recyclerview:recyclerview:${rootProject.ext.supportLibraryVersion}"
+    api "androidx.recyclerview:recyclerview:1.0.0"
 
-    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
-    api 'android.arch.navigation:navigation-ui:1.0.0-alpha07'
-    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07'
-    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
+    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha08'
+    api 'android.arch.navigation:navigation-ui:1.0.0-alpha08'
+    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha08'
+    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha08'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     api 'androidx.palette:palette:1.0.0'
@@ -132,9 +132,9 @@ dependencies {
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:1.1.0-alpha01"
+    api "com.google.android.material:material:1.1.0-alpha02"
 
-    api  'com.airbnb.android:lottie:2.8.0'
+    api 'com.airbnb.android:lottie:2.8.0'
     /**
      * ================================ui end=====================================
      */
