--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -37,7 +37,7 @@ def getVersion() {
 
 
 task exportVarToShell(type: Exec) {
-    commandLine './../../script/export_var.sh'
+    commandLine "${rootProject.getRootDir().getAbsolutePath()}/script/export_var.sh"
     args "${rootProject.ext.versionName}", "${rootProject.getRootDir().getAbsolutePath()}"
 //        args = "VERSION_NAME=${rootProject.ext.versionName}"
 //    }
@@ -79,14 +79,14 @@ android {
     signingConfigs {
         debugSigningConfig {
             (keyAlias, keyPassword, storePassword) = getKeyStoreProperties(debugKeySet)
-            storeFile file('../keystore/debug.jks')
+            storeFile file("${rootProject.getRootDir().getAbsolutePath()}/keystore/debug.jks")
             v1SigningEnabled true
             v2SigningEnabled = true
 
         }
         releaseSigningConfig {
             (keyAlias, keyPassword, storePassword) = getKeyStoreProperties(releaseKeySet)
-            storeFile file('../keystore/release.jks')
+            storeFile file("${rootProject.getRootDir().getAbsolutePath()}/keystore/release.jks")
             v1SigningEnabled true
             v2SigningEnabled = true
         }
