--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
         classpath "io.realm:realm-gradle-plugin:$realmVersion"
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.6"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
