--- a/client/common/src/main/AndroidManifest.xml
+++ b/client/common/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.hawksjamesf.common"/>
+          package="com.hawksjamesf.common">
+
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+</manifest>
