--- a/client/app/src/debug/AndroidManifest.xml
+++ b/client/app/src/debug/AndroidManifest.xml
@@ -59,6 +59,7 @@
 
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.home.HomeActivity"
+            android:theme="@style/HomeTheme"
             android:launchMode="singleTop"/>
 
         <activity
