--- a/client/app/src/animationsExprimental/AndroidManifest.xml
+++ b/client/app/src/animationsExprimental/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
         <activity android:name=".LottieActivity"/>
         <activity android:name=".FrameAnimationActivity"/>
-        <activity android:name=".AnimActivity"/>
+        <activity android:name=".ScrollableActivity"/>
         <activity
             android:name=".TransitionActivity"
             android:theme="@style/BaseAppTheme"/>
