--- a/.travis.yml
+++ b/.travis.yml
@@ -66,4 +66,4 @@ after_script:
 - echo "after_script"
 - set -e
 - cd $TRAVIS_BUILD_DIR
-- ./script/pgyer_upload.sh "${TRAVIS_BUILD_DIR}/client/app/build/outputs/apk/mocked/release/app-mocked-release.apk" $PG_API_KEY $PG_APP_KEY ${TRAVIS_BUILD_DIR}
+#- ./script/pgyer_upload.sh "${TRAVIS_BUILD_DIR}/client/app/build/outputs/apk/mocked/release/app-mocked-release.apk" $PG_API_KEY $PG_APP_KEY ${TRAVIS_BUILD_DIR}
