--- a/client/app/src/debug/AndroidManifest.xml
+++ b/client/app/src/debug/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity
             android:name="com.hawksjamesf.spacecraft.video.VideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:supportsPictureInPicture="true"
             android:theme="@style/VideoTheme">
         </activity>
         <!--
