--- a/client/common/build.gradle
+++ b/client/common/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api 'androidx.core:core-ktx:1.0.1'
-    api 'androidx.multidex:multidex:2.0.0'
+    api 'androidx.multidex:multidex:2.0.1'
     api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
     api "io.reactivex.rxjava2:rxkotlin:2.2.0"
     //    api 'com.jakewharton.timber:timber:4.5.1'
@@ -63,7 +63,7 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    annotationProcessor 'androidx.databinding:databinding-compiler:3.4.0-alpha08'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-alpha06'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
 //
@@ -110,10 +110,10 @@ dependencies {
      * ================================database start==============================
      */
     //room database
-    testImplementation 'androidx.room:room-testing:2.1.0-alpha03'
-    api 'androidx.room:room-runtime:2.1.0-alpha03'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha03'
-    api 'androidx.room:room-rxjava2:2.1.0-alpha03'
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha04'
+    api 'androidx.room:room-runtime:2.1.0-alpha04'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha04'
+    api 'androidx.room:room-rxjava2:2.1.0-alpha04'
 
     //realm database
     api "io.realm:realm-annotations:$realmVersion"
@@ -125,15 +125,24 @@ dependencies {
      */
 
     /**
+     * ===============================image start=============================
+     */
+    api "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
+    /**
+     * ===============================monitor end=============================
+     */
+
+    /**
      * ================================ui start=====================================
      */
     api "androidx.appcompat:appcompat:${rootProject.ext.supportLibraryVersion}"
     api "androidx.recyclerview:recyclerview:1.0.0"
 
-    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-ui:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha11'
+    api 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
+    api 'android.arch.navigation:navigation-ui:1.0.0-rc02'
+    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02'
+    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-rc02'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     api 'androidx.palette:palette:1.0.0'
@@ -142,7 +151,7 @@ dependencies {
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:1.1.0-alpha02"
+    api "com.google.android.material:material:1.1.0-alpha04"
 
     api 'com.airbnb.android:lottie:2.8.0'
     /**
