--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -2,7 +2,7 @@ println("app start")
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
-//apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 
 apply plugin: 'realm-android'
