--- a/client/app/src/animationsExprimental/AndroidManifest.xml
+++ b/client/app/src/animationsExprimental/AndroidManifest.xml
@@ -6,7 +6,7 @@
         <activity android:name=".LottieActivity"/>
         <activity android:name=".FrameAnimationActivity"/>
         <activity
-            android:name=".TransitionActivity"
+            android:name=".TransitionForViewActivity"
             android:theme="@style/BaseAppTheme"/>
 
     </application>
