--- a/client/app/src/debug/AndroidManifest.xml
+++ b/client/app/src/debug/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.hawksjamesf.spacecraft">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.hawksjamesf.spacecraft">
     <!-- 允许联网 -->
-    <uses-permission android:name="android.permission.INTERNET"/> <!-- 获取GSM（2g）、WCDMA（联通3g）等网络状态的信息 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> <!-- 获取wifi网络状态的信息 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> <!-- 保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/> <!-- 获取sd卡写的权限，用于文件上传和下载 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!-- 允许读取手机状态 用于创建BmobInstallation -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 获取GSM（2g）、WCDMA（联通3g）等网络状态的信息 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 获取wifi网络状态的信息 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 获取sd卡写的权限，用于文件上传和下载 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 允许读取手机状态 用于创建BmobInstallation -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name="com.hawksjamesf.spacecraft.App"
@@ -19,33 +19,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity
-            android:name="com.hawksjamesf.spacecraft.ui.person.SettingsActivity">
-        </activity>
+        <activity android:name="com.hawksjamesf.spacecraft.ui.person.SettingsActivity"></activity>
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.MainActivity"
             android:label="@string/title_activity_main"
-            android:launchMode="singleTop">
-        </activity>
+            android:launchMode="singleTop"></activity>
         <activity
             android:name="com.hawksjamesf.spacecraft.photo.PhotoActivity"
             android:label="PhoteoActivity"
-            android:theme="@style/PhotoTheme"
-            >
-        </activity>
+            android:theme="@style/PhotoTheme"></activity>
         <activity
             android:name="com.hawksjamesf.spacecraft.video.VideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:supportsPictureInPicture="true"
-            android:theme="@style/VideoTheme">
-        </activity>
+            android:theme="@style/VideoTheme"></activity>
         <!--
      You don't need to include android:required="false" if your app's
      minSdkVersion is 28 or higher.
         -->
         <uses-library
             android:name="android.test.runner"
-            android:required="false"/>
+            android:required="false" />
         <!--
  For both of these declarations, you don't need to include
              android:required="false" if your app's minSdkVersion is 28
@@ -53,49 +47,48 @@
         -->
         <uses-library
             android:name="android.test.base"
-            android:required="false"/>
+            android:required="false" />
         <uses-library
             android:name="android.test.mock"
-            android:required="false"/>
+            android:required="false" />
 
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.home.HomeActivity"
-            android:theme="@style/HomeTheme"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:theme="@style/HomeTheme" />
 
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.SplashActivity"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.SetupWizardActivity"
             android:label="@string/title_activity_setup_wizard"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
 
 
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.signin.SignInActivity"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.signin.SignUpActivity"
             android:parentActivityName="com.hawksjamesf.spacecraft.ui.signin.SignInActivity"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
 
-        <activity android:name=".ViewPagerActivity"/>
-        <activity android:name=".ParallaxActivity"/>
+        <activity android:name=".ViewPagerActivity" />
+        <activity android:name=".ParallaxActivity" />
 
-        <activity android:name=".AnimActivity"/>
-        <activity android:name=".LottieActivity"/>
-        <activity android:name=".FrameAnimationActivity"/>
-        <activity
-            android:name=".TransitionActivity"
-            android:theme="@style/BaseAppTheme"/>
-        <activity android:name=".ScrollableActivity"/>
+        <activity android:name=".AnimActivity" />
+        <activity android:name=".LottieActivity" />
+        <activity android:name=".FrameAnimationActivity" />
+        <activity android:name=".TransitionForViewActivity" />
+        <activity android:name=".TransitionForActivityActivity" android:theme="@style/BaseAppTheme"/>
+        <activity android:name=".ScrollableActivity" />
     </application>
 
 </manifest>
