--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -117,12 +117,21 @@ android {
     sourceSets {
         main.java.srcDirs += ["src/main/kotlin"]
 
+        //animation
         main.java.srcDirs += ["src/animationsExprimental/java"]
         main.res.srcDirs += ["src/animationsExprimental/res"]
         main.res.srcDirs += ["src/animationsExprimental/res-frame-animation"]
 //        main.manifest.srcFile "src/animationsExprimental/AndroidManifest.xml"
         main.assets.srcDirs += ["src/animationsExprimental/assets"]
 
+        //scroll
+        main.java.srcDirs += ["src/scrollExprimental/java"]
+        main.res.srcDirs += ["src/scrollExprimental/res"]
+        main.res.srcDirs += ["src/scrollExprimental/res-frame-animation"]
+//        main.manifest.srcFile "src/scrollExprimental/AndroidManifest.xml"
+        main.assets.srcDirs += ["src/scrollExprimental/assets"]
+
+        //vlayout
         main.java.srcDirs += ["src/scrollExprimental/java"]
         main.res.srcDirs += ["src/scrollExprimental/res"]
         main.res.srcDirs += ["src/scrollExprimental/res-frame-animation"]
