--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
     ext {
         compileSdkVersion = 28
         buildToolsVersion = '28.0.3'
-        minSdkVersion = 19//kk
-        targetSdkVersion = 26
+        minSdkVersion = 21//19 kk,21 L,23 M,24 N
+        targetSdkVersion = 28
         versionCode = 2
         versionName = "2.0.0"
         androidPluginVersion = '3.2.0'
@@ -49,8 +49,8 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha13'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
+        classpath 'com.android.tools.build:gradle:3.5.0-alpha07'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
         classpath "io.realm:realm-gradle-plugin:$realmVersion"
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.6"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
