--- a/client/common/build.gradle
+++ b/client/common/build.gradle
@@ -63,8 +63,13 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-alpha06'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-alpha07'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
+    // Lifecycles only (no ViewModel or LiveData)
+    api 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha03'
+    //If you use Java 8 Language, then observe events with DefaultLifecycleObserver
+//    api 'androidx.lifecycle:lifecycle-common-java8:2.1.0-alpha03'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
 //
 //// If you want to bind to Android-specific lifecycles
@@ -136,13 +141,13 @@ dependencies {
     /**
      * ================================ui start=====================================
      */
-    api "androidx.appcompat:appcompat:${rootProject.ext.supportLibraryVersion}"
+    api "androidx.appcompat:appcompat:1.0.2"
     api "androidx.recyclerview:recyclerview:1.0.0"
 
-    api 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
-    api 'android.arch.navigation:navigation-ui:1.0.0-rc02'
-    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02'
-    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-rc02'
+    api 'android.arch.navigation:navigation-fragment:1.0.0'
+    api 'android.arch.navigation:navigation-ui:1.0.0'
+    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
+    api 'android.arch.navigation:navigation-ui-ktx:1.0.0'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     api 'androidx.palette:palette:1.0.0'
