资源移动到common的库

--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             >
         </activity>
         <activity
-            android:name="com.hawksjamesf.spacecraft.video.VideoActivity"
+            android:name="com.hawksjamesf.common.VideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/VideoTheme">
         </activity>
