--- a/client/app/src/debug/AndroidManifest.xml
+++ b/client/app/src/debug/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="PhoteoActivity"
             android:theme="@style/PhotoTheme"></activity>
         <activity
-            android:name="com.hawksjamesf.spacecraft.video.VideoActivity"
+            android:name="com.hawksjamesf.common.VideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:supportsPictureInPicture="true"
             android:theme="@style/VideoTheme"></activity>
