--- a/client/common/build.gradle
+++ b/client/common/build.gradle
@@ -36,11 +36,11 @@ android {
         main.res.srcDirs += ["src/carousel/res"]
         main.assets.srcDirs += ["src/carousel/assets"]
 
-        //chaplin component
-        main.aidl.srcDirs += ["src/chaplin/aidl"]
-        main.java.srcDirs += ["src/chaplin/java"]
-        main.res.srcDirs += ["src/chaplin/res"]
-        main.assets.srcDirs += ["src/chaplin/assets"]
+        //video component
+        main.aidl.srcDirs += ["src/video/aidl"]
+        main.java.srcDirs += ["src/video/java"]
+        main.res.srcDirs += ["src/video/res"]
+        main.assets.srcDirs += ["src/video/assets"]
     }
 
 }
