--- a/client/common/build.gradle
+++ b/client/common/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
     api "io.reactivex.rxjava2:rxkotlin:2.2.0"
     //    api 'com.jakewharton.timber:timber:4.5.1'
-    api "com.blankj:utilcode:${rootProject.ext.utilcodeVersion}"
+    api "com.blankj:utilcode:+"
     api 'joda-time:joda-time:2.10'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
