--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url = uri "https://repo.spring.io/milestone" }
         maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://maven.fabric.io/public' }
     }
     ext {
         compileSdkVersion = 28
@@ -54,10 +55,13 @@ buildscript {
         classpath "io.realm:realm-gradle-plugin:$realmVersion"
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.6"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
+
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath 'com.google.firebase:firebase-plugins:1.2.0'
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-
 
         //server
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
@@ -77,6 +81,7 @@ allprojects {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url = uri "https://repo.spring.io/milestone" }
         maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
