--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.hawksjamesf.spacecraft">
     <!-- 允许联网 -->
     <uses-permission android:name="android.permission.INTERNET"/> <!-- 获取GSM（2g）、WCDMA（联通3g）等网络状态的信息 -->
@@ -9,6 +10,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/> <!-- 获取sd卡写的权限，用于文件上传和下载 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!-- 允许读取手机状态 用于创建BmobInstallation -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name="com.hawksjamesf.spacecraft.App"
@@ -16,29 +18,28 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name="com.hawksjamesf.spacecraft.ui.person.SettingsActivity">
-        </activity>
-        <activity
-            android:name="com.hawksjamesf.spacecraft.ui.MainActivity"
-            android:label="@string/title_activity_main"
-            android:launchMode="singleTop">
-        </activity>
-        <activity
-            android:name="com.hawksjamesf.spacecraft.photo.PhotoActivity"
-            android:theme="@style/PhotoTheme"
-            >
-        </activity>
-        <activity
-            android:name="com.hawksjamesf.common.VideoActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/VideoTheme">
-        </activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <!-- 配置APP ID -->
+        <meta-data
+            android:name="BUGLY_APPID"
+            android:value="${BUGLY_APP_ID}"/>
+        <!-- 配置APP版本号 -->
+        <meta-data
+            android:name="BUGLY_APP_VERSION"
+            android:value="${BUGLY_APP_VERSION}"/>
+        <!-- 配置APP渠道号 -->
+        <meta-data
+            android:name="BUGLY_APP_CHANNEL"
+            android:value="${BUGLY_APP_KEY}"/>
+        <!-- 配置Bugly调试模式（true或者false）-->
+        <meta-data
+            android:name="BUGLY_ENABLE_DEBUG"
+            android:value="${BUGLY_ENABLE_DEBUG}"/>
         <!--
-     You don't need to include android:required="false" if your app's
-     minSdkVersion is 28 or higher.
-        -->
+ You don't need to include android:required="false" if your app's
+ minSdkVersion is 28 or higher.
+    -->
         <uses-library
             android:name="android.test.runner"
             android:required="false"/>
@@ -54,10 +55,24 @@
             android:name="android.test.mock"
             android:required="false"/>
 
+        <activity android:name="com.hawksjamesf.spacecraft.ui.person.SettingsActivity"/>
+        <activity
+            android:name="com.hawksjamesf.spacecraft.ui.MainActivity"
+            android:label="@string/title_activity_main"
+            android:launchMode="singleTop"/>
+        <activity
+            android:name="com.hawksjamesf.spacecraft.photo.PhotoActivity"
+            android:label="PhoteoActivity"
+            android:theme="@style/PhotoTheme"/>
+        <activity
+            android:name="com.hawksjamesf.common.VideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:supportsPictureInPicture="true"
+            android:theme="@style/VideoTheme"/>
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.home.HomeActivity"
-            android:theme="@style/HomeTheme"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:theme="@style/HomeTheme"/>
 
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.SplashActivity"
@@ -81,6 +96,19 @@
             android:name="com.hawksjamesf.spacecraft.ui.signin.SignUpActivity"
             android:parentActivityName="com.hawksjamesf.spacecraft.ui.signin.SignInActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+
+        <activity android:name=".ViewPagerActivity"/>
+        <activity android:name=".ParallaxActivity"/>
+
+        <activity android:name=".AnimActivity"/>
+        <activity android:name=".LottieActivity"/>
+        <activity android:name=".FrameAnimationActivity"/>
+        <activity android:name=".TransitionForViewActivity"/>
+        <activity
+            android:name=".TransitionForActivityActivity"
+            android:theme="@style/BaseAppTheme"
+            />
+        <activity android:name=".ScrollableActivity"/>
     </application>
 
 </manifest>
