--- a/client/common/build.gradle
+++ b/client/common/build.gradle
@@ -159,6 +159,7 @@ dependencies {
     api "com.google.android.material:material:1.1.0-alpha04"
 
     api 'com.airbnb.android:lottie:2.8.0'
+    implementation 'com.google.android:flexbox:1.1.0'
     /**
      * ================================ui end=====================================
      */
