--- a/client/common/build.gradle
+++ b/client/common/build.gradle
@@ -63,11 +63,11 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-alpha07'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-alpha12'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     // Lifecycles only (no ViewModel or LiveData)
-    api 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha03'
+    api 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
     //If you use Java 8 Language, then observe events with DefaultLifecycleObserver
 //    api 'androidx.lifecycle:lifecycle-common-java8:2.1.0-alpha03'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
@@ -115,10 +115,10 @@ dependencies {
      * ================================database start==============================
      */
     //room database
-    testImplementation 'androidx.room:room-testing:2.1.0-alpha04'
-    api 'androidx.room:room-runtime:2.1.0-alpha04'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha04'
-    api 'androidx.room:room-rxjava2:2.1.0-alpha04'
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha06'
+    api 'androidx.room:room-runtime:2.1.0-alpha06'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha06'
+    api 'androidx.room:room-rxjava2:2.1.0-alpha06'
 
     //realm database
     api "io.realm:realm-annotations:$realmVersion"
@@ -156,10 +156,10 @@ dependencies {
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:1.1.0-alpha04"
+    api "com.google.android.material:material:1.1.0-alpha05"
 
     api 'com.airbnb.android:lottie:2.8.0'
-    implementation 'com.google.android:flexbox:1.1.0'
+    api 'com.google.android:flexbox:1.1.0'
     /**
      * ================================ui end=====================================
      */
