--- a/client/network/build.gradle
+++ b/client/network/build.gradle
@@ -64,20 +64,21 @@ android {
 //            }
         }
     }
-    flavorDimensions('data_access')
+    publishNonDefault true
+    flavorDimensions "data_access"
     productFlavors {
-
         mocked {
             dimension 'data_access'
             buildConfigField 'boolean', 'MOCKED_DATA_ACCESS', 'true'
             buildConfigField 'String', 'WEATHER_URL', '" "'
+
         }
-//        real{
-//            dimension 'data_access'
-//            buildConfigField 'boolean','MOCKED_DATA_ACCESS','false'
-//            buildConfigField 'String','WEATHER_URL','"https://api.openweathermap.org"'
-//
-//        }
+        real {
+            dimension 'data_access'
+            buildConfigField 'boolean','MOCKED_DATA_ACCESS','false'
+            buildConfigField 'String','WEATHER_URL','"https://api.openweathermap.org"'
+
+        }
 //
 //        realLocalServer{
 //            dimension 'data_access'
